--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,14 @@
 <!-- Navbar -->
+  {{ if .Params.background }}
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
+  {{ else }}
+    <nav class="navbar navbar-expand-lg bg-primary fixed-top">
+  {{ end }}
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="{{ .Site.BaseURL | relURL }}" rel="tooltip" title="" data-placement="bottom" target="_blank">
-                    {{.Site.Title}}
-                </a>
+                <a class="navbar-brand" href="{{ .Site.BaseURL | relURL }}" rel="tooltip" title="" data-placement="bottom" target="{{ .Site.Params.BrandTarget | default "_blank" }}">
+                    {{.Params.Title | default .Site.Title}}
+                </a>             
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
                     <span class="navbar-toggler-bar bar2"></span>
@@ -13,7 +17,7 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="{{ "img/blurred-image-1.jpg" | relURL }}">
               <ul class="navbar-nav  ml-auto">
-      {{ range .Site.Menus.main }}
+      {{ range index .Site.Menus ( .Params.navmenu | default "main" ) }}
         {{ if .HasChildren }}
         <li class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown">
