--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -27,7 +27,7 @@
 </script>
 
     {{ range .Site.Params.custom_js }}
-    <script src="{{ "/js/" | relURL }}{{ . }}"></script>
+    <script src="{{ . }}"></script>
     {{ end }}
     
     
