--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -7,12 +7,12 @@
         <div class="container">
             <div class="navbar-translate">
                 <div class="navbar-brand">
-                <a class="" href="{{ .Site.BaseURL | relURL }}" rel="tooltip" title="" data-placement="bottom" target="{{ .Site.Params.BrandTarget | default "_blank" }}">
-                    {{.Site.Title}}
-                </a>             
-                <a class="navbar-title">
-                    : {{.Params.Title}}
-                </a>
+                    <a class="navbar-title" href="{{ .Site.BaseURL | relURL }}" rel="tooltip" title="" data-placement="bottom" target="{{ .Site.Params.BrandTarget | default "_blank" }}">
+                        {{.Site.Title}}
+                    </a>
+                    <a class="navbar-subtitle">
+                        : {{.Params.Title}}
+                    </a>
                 </div>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
@@ -24,7 +24,7 @@
               <ul class="navbar-nav  ml-auto">
       {{ range index .Site.Menus ( .Params.navmenu | default "main" ) }}
         {{ if .HasChildren }}
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown"{{ if .Identifier }} id="nav-{{ .Identifier }}"{{ end }}>
           <a href="#" class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown">
             {{ .Pre }} <span>{{ .Name }}</span>
             <span class="caret"></span>
@@ -39,8 +39,8 @@
           </div>
         </li>
         {{ else }}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ .URL | safeURL }}"{{ if $.IsHome }} data-target="{{ .URL }}"{{ end }}>
+        <li class="nav-item"{{ if .Identifier }} id="nav-{{ .Identifier }}"{{ end }}>
+          <a class="nav-link" href="{{ .URL | safeURL }}"{{ if $.IsHome }} data-target="{{ .URL }}"{{ end }} {{if (urls.Parse .URL).Host }}target="_blank"{{ end }}>
             {{ .Pre }}
             <span>{{ .Name }}</span>
           </a>
@@ -51,4 +51,4 @@
             </div>
         </div>
     </nav>
-    <!-- End Navbar -->
+<!-- End Navbar -->
